infrastructure/k8s/c1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic-c1
  labels:
    name: petclinic-c1
    cluster: c1
